added ros3d.js lib to visualize sensor_msgs/LaserScan

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,8 @@
   "globals": {
     "_": true,
     "ros": true,
-    "ROSLIB": true
+    "ROSLIB": true,
+    "ROS3D": true
   },
   "extends": [
     "airbnb/base",
